--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
   position: relative;
   height: 100vh;
   transition: opacity 1s;
-  overflow-y: hidden;
+  overflow-y: scroll;
 }
 
 .skillsbody {
